--- a/docs/api/v3.md
+++ b/docs/api/v3.md
@@ -6,7 +6,9 @@ categories: api
 tags: rest
 ---
 
-## Alerts
+### Alerts
+
+Alerts are received and processed before being added to database.
 
 | Resource | Description |
 | -------- | -------- |
@@ -17,7 +19,9 @@ tags: rest
 | [POST /api/alert/:id/status](/docs/api/post/alert/tag) | foo |
 | [DELETE /api/alert/:id](/docs/api/delete/alert) | foo |
 
-## Heartbeats
+### Heartbeats
+
+Heartbeats are sent from something at regular intervals to ensure that it is operating.
 
 | Resource | Description |
 | -------- | -------- |
